fixed test error