@@ -5,6 +5,7 @@ package me.saro.sap.jco.test;
  */
 
 import java.io.IOException;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -48,7 +49,7 @@ public class SapManagerBasicTest {
 
         // set table parameters [example table parameter name is param4]
         JCoTable requestTableParameter = function.getImportTableParameter("param4");
-        List.of("value1", "value2", "value3").forEach(e -> {
+        Arrays.asList("value1", "value2", "value3").forEach(e -> {
             requestTableParameter.appendRow();
             requestTableParameter.setValue("field1", "text");
             requestTableParameter.setValue("field2", e);
