@@ -5,6 +5,7 @@ package me.saro.sap.jco.test;
  */
 
 import java.io.IOException;
+import java.util.Arrays;
 import java.util.List;
 
 import com.sap.conn.jco.JCoException;
@@ -33,7 +34,7 @@ public class SapManagerMultipleThreadTest {
     // example multiple thread
     public void multipleThread() throws JCoException, IOException {
         // example user no -> name
-        List<Integer> userNoList = List.of(1, 2, 3, 4);
+        List<Integer> userNoList = Arrays.asList(1, 2, 3, 4);
 
         // connect
         SapManager sap = getSapManager();
